# github_cleaner

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  notion_create_work_plan.json  pyproject.toml  streamlit_app.py
docs/: AGENT_INTEGRATION.md  BUILD_SUMMARY.md  DEPLOY_RENDER.md  EVALUATION_AND_NEXT_STEPS.md  MODULES.md  PHASE_1.5_AGENT_PLAN.md  PROJECT_WORK_PLAN.md  README.md  SETUP_UV.md  START_HERE.md  TASKS.md  TASKS_PHASE2.md  TASKS_REMEDIATION.md  TASKS_SCORE_BREAKDOWN.md  TASKS_STRUCTURE_TO_SCORING.md  VOICEFLOW_AGENT.md
output/: .gitkeep
scripts/: check-ngrok.sh  scan-and-save.sh
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: scan.py
src/contracts/: __init__.py  repo_dto.py  scan_request.py  scan_response.py  voiceflow_scan_response.py
src/data/: __init__.py  github_client.py  repo_fetcher.py  repo_inspector.py
src/phase2/: __init__.py  readme_client.py  readme_signals.py  scan_integration.py
src/scoring/: __init__.py  aggregator.py  classifier.py  issues.py  remediation.py  scorer.py  suggestions.py
tests/: __init__.py  conftest.py  test_api_scan.py  test_data_layer.py  test_remediation.py  test_repo_inspector.py  test_scoring.py  test_voiceflow_scan.py
